--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -8,32 +8,31 @@
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../../../css/icons-extra.css" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css" />
-		<script src="../../../js/jquery-3.2.0.min.js"></script>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">出品者评论</h1>
+			<h1 class="mui-title lang" data-locale="det_pcercomment"></h1>
 		</header>
 		<div class="mui-content ka_mainbox">
 			<ul class="mui-table-view">
 			        <li class="mui-table-view-cell">
-			            <div class="mui-pull-left ka_commentsort">全部</div>
+			            <div class="mui-pull-left ka_commentsort lang" data-locale="det_all">全部</div>
 			            <div class="ka_userbox">
 				            <div id="goodcomment">
 				            	<img src="../../../images/Good.PNG" width="30" height="30" />
-				            	<div class="ka_commentfonts">好评</div>
+				            	<div class="ka_commentfonts lang" data-locale="det_goodcomments">好评</div>
 				            	<div class="ka_commentnum">500</div>
 				             </div>
 				             <div id="normalcomment">
 				            	<img src="../../../images/Normal.PNG" width="30" height="30"/>
-				            	<div class="ka_commentfonts">中评</div>
+				            	<div class="ka_commentfonts lang" date-locale="det_normalcomments">中评</div>
 				            	<div class="ka_commentnum">20</div>
 				             </div>
 				             <div id="badcomment">
 				            	<img src="../../../images/Bad.PNG" width="30" height="30"/>
-				            	<div class="ka_commentfonts">差评</div>
+				            	<div class="ka_commentfonts lang" data-locale="det_badcomments">差评</div>
 				            	<div class="ka_commentnum">500</div>
 				             </div>
 			            </div>
@@ -143,6 +142,8 @@
 			    </ul>
 		</div>
 		<script src="../../../js/mui.min.js"></script>
+		<script src="../../../js/jquery-3.2.0.min.js"></script>
+		<script src="../../../js/language.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			$(function(){
@@ -157,7 +158,7 @@
 					$("#normalcommentlist").show();
 					$("#goodcommentlist").hide();
 					$("#allcommentlist").hide();
-					$(".ka_commentsort").html("中评");
+					$(".ka_commentsort").attr("data-locale","det_normalcomments");
 					$(".ka_commentfonts").removeClass("ka_clickcs");
 					$("#normalcomment .ka_commentfonts").addClass("ka_clickcs");
 				}
@@ -168,7 +169,7 @@
 					$("#normalcommentlist").hide();
 					$("#goodcommentlist").hide();
 					$("#allcommentlist").hide();
-					$(".ka_commentsort").html("差评");
+					$(".ka_commentsort").attr("data-locale","det_badcomments");
 					$(".ka_commentfonts").removeClass("ka_clickcs");
 					$("#badcomment .ka_commentfonts").addClass("ka_clickcs");
 				}
@@ -179,7 +180,7 @@
 					$("#badcommentlist").hide();
 					$("#normalcommentlist").hide();
 					$("#allcommentlist").hide();
-					$(".ka_commentsort").html("好评");
+					$(".ka_commentsort").attr("data-locale","det_goodcomments");
 					$(".ka_commentfonts").removeClass("ka_clickcs");
 					$("#goodcomment .ka_commentfonts").addClass("ka_clickcs");
 				}
