--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -8,13 +8,12 @@
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../../../css/icons-extra.css" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css" />
-		<script src="../../../js/jquery-3.2.0.min.js"></script>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">商品评论</h1>
+			<h1 class="mui-title lang" data-locale="det_procoment"></h1>
 		</header>
 		<div class="mui-content ka_mainbox">
 			<ul class="mui-table-view">
@@ -48,6 +47,8 @@
 			    </ul>
 		</div>
 		<script src="../../../js/mui.min.js"></script>
+		<script src="../../../js/jquery-3.2.0.min.js"></script>
+		<script src="../../../js/language.js"></script>
 		<script type="text/javascript">
 			mui.init();
 		</script>
