--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -7,13 +7,12 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css" />
-		<script src="../../../js/jquery-3.2.0.min.js"></script>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">商品列表</h1>
+			<h1 class="mui-title lang" data-locale="detli_title"></h1>
 			<a class="mui-icon mui-icon-more mui-icon-right-nav mui-pull-right"></a>
 		</header>
 		<div class="mui-content ka_mainbox">
@@ -22,7 +21,7 @@
 			        	<div class="ka_userbox">
 			        		<img src="../../../images/logo.png" class="ka_touxiangimg" width="50" height="50"/>
 			        		<div><b>Kappa</b></div>
-			        		<font color="#808080" size="2">评价:<font color="#007AFF">5050</font>&nbsp;&nbsp;&nbsp;出品数:<font color="#007AFF">5089</font></font>
+			        		<font color="#808080" size="2"><span class="lang" date-locale="det_coments">评论</span>:<font color="#007AFF">5050</font>&nbsp;&nbsp;&nbsp;<span class="lang" data-locale="det_producednum">出品数</span>:<font color="#007AFF">5089</font></font>
 			        	</div>
 			        </li>
 			        <li class="mui-table-view-cell commentlist">
@@ -83,6 +82,8 @@
 			   
 		</div>
 		<script src="../../../js/mui.min.js"></script>
+		<script src="../../../js/jquery-3.2.0.min.js"></script>
+		<script src="../../../js/language.js"></script>
 		<script type="text/javascript">
 			var ws = null;
 		    mui.plusReady(function () {
