--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -9,9 +9,8 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../../css/mui.min.css">
 		<link rel="stylesheet" href="../../../css/kankan_home.css">
-		<script src="../../../js/jquery-3.2.0.min.js"></script>
-		<style>
-		</style>
+		<link href="../../../css/mui.picker.css" rel="stylesheet" />
+		<link href="../../../css/mui.poppicker.css" rel="stylesheet" />
 	</head>
 
 	<body class="mui-fullscreen">
@@ -74,11 +73,13 @@
 							     <div class="ka_prologbox">
 								    <h5 class="ka_proloh5">商品详情</h5>
 								    <ul class="mui-table-view">
-							            <li class="mui-table-view-cell">
-							                <a class="mui-navigate-right"  href="#productsort" id="prosort">
+							            <li class="mui-table-view-cell" >
+							                <div class="mui-navigate-right"   id="showCityPicker">
 							                    	<span class="ka_proinfo">商品种类</span>
-							                    	<div class="mui-pull-right ka_bitian" >必填</div>
-							                </a>
+							                    	<div class="mui-pull-right ka_bitian" id="bitian1">必填</div>
+							                    	<div id='sortResult' class="ui-alert mui-pull-right ka_sortname"></div>
+							                </div>
+							                
 							            </li>
 							            <li class="mui-table-view-cell">
 							                <a class="mui-navigate-right" href="#productstaute" id="prostuat">
@@ -185,8 +186,35 @@
 	<script src="../../../js/mui.min.js"></script>
 	<script src="../../../js/mui.view.js "></script>
 	<script src='../../../js/feedback.js'></script>
+	<script src="../../../js/mui.picker.js"></script>
+	<script src="../../../js/mui.poppicker.js"></script>
+	<script src="../../../js/pro_loginsort.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../../js/jquery-3.2.0.min.js"></script>
 	<script>
-		mui.init();
+		(function($, doc) {
+				$.init();
+				$.ready(function() {
+					//级联示例
+					var cityPicker = new $.PopPicker({
+						layer: 2
+					});
+					cityPicker.setData(cityData);
+					var showCityPickerButton = doc.getElementById('showCityPicker');
+					var cityResult = doc.getElementById('sortResult');
+					showCityPickerButton.addEventListener('tap', function(event) {
+						cityPicker.show(function(items) {
+							cityResult.innerText =items[0].text + " " + items[1].text;
+							//返回 false 可以阻止选择框的关闭
+							//return false;
+						});
+						document.getElementById("bitian1").style.display="none";
+					}, false);
+					//-----------------------------------------	
+				});
+			})(mui, document);
+			
+		//mui.init();
+
 		//初始化单页view
 		var viewApi = mui('#app').view({
 			defaultPage: '#productlogin'
